Tue Dec 10 15:15:37 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_check): disable GC during checking and
	  restore malloc_increase info.

Tue Dec 10 14:41:53 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (reflist_add): return 0 if reference already exists
	* gc.c (allrefs_add): return 1 on newly added references
	* gc.c (allrefs_i): follow references to construct complete object
	  graph. before this patch, RGENGC_CHECK could fail to verify some WB
	  miss issues. [Bug #9226] [ruby-core:58959]

Tue Dec 10 11:20:56 2013  Aman Gupta <ruby@tmm1.net>

	* ext/objspace/objspace_dump.c (dump_object): include fstring flag on
	  strings. include gc flags (old, remembered, wb_protected) on all objects.
	* ext/objspace/objspace_dump.c (Init_objspace_dump): initialize lazy
	  IDs before first use.
	* gc.c (rb_obj_gc_flags): new function to retrieve object flags
	* internal.h (RB_OBJ_GC_FLAGS_MAX): maximum flags allowed for one obj
	* test/objspace/test_objspace.rb (test_dump_flags): test for above
	* test/objspace/test_objspace.rb (test_trace_object_allocations):
	  resolve name before dump (for rb_class_path_cached)

Tue Dec 10 07:48:29 2013  Aman Gupta <ruby@tmm1.net>

	* vm_method.c (rb_clear_method_cache_by_class): fire
	  ruby::method-cache-clear probe on global or klass-level method cache
	  clear [Bug #9190]
	* probes.d (provider ruby): new dtrace probe
	* doc/dtrace_probes.rdoc: docs for new probe
	* test/dtrace/test_method_cache.rb: test for new probe

Tue Dec 10 06:14:11 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Remove curses from documentable directories.

Tue Dec 10 04:55:36 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/digest.rb: Deprecate OpenSSL::Digest::Digest
	  [Fixes GH-446] https://github.com/ruby/ruby/pull/446

Tue Dec 10 00:41:42 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/thread/thread.c: [DOC] add call-seq alias for Queue#enq, #<<, etc.

	* ext/thread/thread.c (Init_thread): use rb_define_alias instead of